# ecos-java-scala

./: .gitignore  Jenkinsfile  Jenkinsfile.pr  Makefile  README.md  build.sbt  build.xml  pom.xml
project/: Dependencies.scala
src/main/assembly/: job.xml
src/main/java/com/github/ecos/: NativeECOS.java  RunECOS.java
src/main/java/io/citrine/ecos/: NativeECOS.java  RunECOS.java
src/main/native/: NativeECOS.c  com_github_ecos_NativeECOS.h
src/main/resources/lib/static/Linux/amd64/: libecos.jnilib
src/main/resources/lib/static/Mac OS X/x86_64/: libecos.jnilib
src/main/scala/com/github/ecos/: QpSolver.scala
src/main/scala/com/github/ecos/factorization/: ALS.scala
src/main/scala/io/citrine/ecos/: NativeECOS.scala  QpSolver.scala  RunECOS.scala
src/native/: CMakeLists.txt  NativeECOS.c
src/native/include/: io_citrine_ecos_NativeECOS.h
src/test/scala/com/github/ecos/factorization/: ALSSuite.scala
